<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.apache</groupId>
    <artifactId>apache</artifactId>
    <version>19</version>
  </parent>

  <groupId>in.hocg.boot</groupId>
  <name>Spring Boot :: Starters :: Project</name>
  <artifactId>spring-boot-starters-project</artifactId>
  <packaging>pom</packaging>
  <version>${revision}</version>

  <properties>
    <revision>1.0.33</revision>

    <java.version>11</java.version>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <!-- Maven plugins -->
    <maven-compiler-plugin.version>3.6.0</maven-compiler-plugin.version>
    <maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
    <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
    <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
    <flatten-maven-plugin.version>1.1.0</flatten-maven-plugin.version>

    <spring-boot.version>2.2.6.RELEASE</spring-boot.version>
    <lombok.version>1.18.12</lombok.version>
  </properties>

  <modules>
    <module>spring-boot-dependencies</module>
    <module>spring-boot-starters</module>
    <module>spring-boot-samples</module>
    <!-- 组件 -->
    <module>spring-boot-named</module>
    <module>spring-boot-oss</module>
    <module>spring-boot-sso</module>
    <module>spring-boot-mybatis-plus</module>
    <module>spring-boot-cache</module>
    <module>spring-boot-web</module>
    <module>spring-boot-netty</module>
    <module>spring-boot-knife</module>
    <module>spring-boot-distributed-lock</module>
    <module>spring-boot-message</module>
    <module>spring-boot-logging</module>
    <module>spring-boot-openfeign</module>
    <module>spring-boot-sms</module>
    <module>spring-boot-mail</module>
    <module>spring-boot-validation</module>
    <module>spring-boot-xxljob</module>
    <module>spring-boot-utils</module>
    <module>spring-boot-wxmp</module>
    <module>spring-boot-wxma</module>
    <module>spring-boot-wxcp</module>
    <module>spring-boot-schedulerx</module>
    <module>spring-boot-test</module>
    <module>spring-boot-monitor</module>
    <module>spring-boot-excel</module>
    <module>spring-boot-webmagic</module>
    <module>spring-boot-elasticsearch</module>
    <module>spring-boot-flyway</module>
    <module>spring-boot-dynamic-datasource</module>
    <module>spring-boot-youtube</module>
    <module>spring-boot-sentinel</module>
    <module>spring-boot-arthas</module>
    <module>spring-boot-javacv</module>
    <module>spring-boot-ws</module>
    <module>spring-boot-notify</module>
    <module>spring-boot-kafka</module>
    <module>spring-boot-cps</module>
    <module>spring-boot-rocketmq</module>
    <module>spring-boot-tpl</module>
  </modules>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>hocgin</name>
      <email>hocgin@gmail.com</email>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git@github.com:hocgin/spring-boot-starters-project.git</connection>
    <developerConnection>scm:git:git@github.com:hocgin/spring-boot-starters-project.git</developerConnection>
    <url>git@github.com:hocgin/spring-boot-starters-project.git</url>
  </scm>

  <profiles>
    <profile>
      <id>local</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <skip>true</skip>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <build>
    <resources>
      <resource>
        <directory>src/main/java</directory>
        <includes>
          <include>**/*.xml</include>
        </includes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>flatten-maven-plugin</artifactId>
          <version>${flatten-maven-plugin.version}</version>
          <configuration>
            <updatePomFile>true</updatePomFile>
            <flattenMode>resolveCiFriendliesOnly</flattenMode>
          </configuration>
          <executions>
            <execution>
              <id>flatten</id>
              <phase>process-resources</phase>
              <goals>
                <goal>flatten</goal>
              </goals>
            </execution>
            <execution>
              <id>flatten.clean</id>
              <phase>clean</phase>
              <goals>
                <goal>clean</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>${maven-gpg-plugin.version}</version>
          <executions>
            <execution>
              <phase>verify</phase>
              <goals>
                <goal>sign</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <gpgArguments>
              <arg>--pinentry-mode</arg>
              <arg>loopback</arg>
            </gpgArguments>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>${maven-source-plugin.version}</version>
          <configuration>
            <attach>true</attach>
          </configuration>
          <executions>
            <execution>
              <phase>compile</phase>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>${maven-javadoc-plugin.version}</version>
          <configuration>
            <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
            <additionalJOptions>
              <additionalJOption>-Xdoclint:none</additionalJOption>
              <additionalJOption>--allow-script-in-comments</additionalJOption>
            </additionalJOptions>
            <failOnError>false</failOnError>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <fork>true</fork>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
            <encoding>${project.build.sourceEncoding}</encoding>
            <annotationProcessorPaths>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
              </path>
              <path>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-configuration-processor</artifactId>
                <version>${spring-boot.version}</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
